style: arreglo de hover de iconos

--- a/Google/index.html
+++ b/Google/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <nav class="nav-links">
-        <a href="#">Gmail</a>
-        <a href="#">Imagenes</a>
+        <a href="#" class="nav-hover">Gmail</a>
+        <a href="#" class="nav-hover">Imágenes</a>
         <span
-          class="menu-icon"
+          class="menu-icon nav-hover"
           tabindex="0"
           aria-label="Aplicaciones de Google"
         >
@@ -35,13 +35,11 @@
 
     <main>
       <div class="logo">
-        <h1>
-          <img
-            src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google Logo"
-            class="google-logo"
-          />
-        </h1>
+        <img
+          src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+          alt="Google Logo"
+          class="google-logo"
+        />
       </div>
 
       <div class="search-container">
@@ -59,7 +57,7 @@
     </main>
 
     <footer>
-      <div class="footer-top"><span>Colombia</span> </div>
+      <div class="footer-top"><span>Colombia</span></div>
       <div class="footer-bottom">
         <div class="footer-links">
           <a href="#">Sobre Google</a>
