style: cambio de proporciones de medidas

--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -24,7 +24,6 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/9/90/Mercedes-Logo.svg"
                 alt="Mercedes"
-                style="width: 28px; height: 28px"
               />
             </div>
             <div>
@@ -62,7 +61,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"
                 alt="Figma"
-                style="width: 28px; height: 28px"
+                
               />
             </div>
             <div>
@@ -155,7 +154,7 @@
         </a>
       </nav>
 
-      <footer class="profile-container">
+      <nav class="profile-container">
         <label class="profile-toggle-label">
           <div class="profile-avatar">
             <img
@@ -182,7 +181,7 @@
           </div>
           <div class="profile-item"><i class="fas fa-history"></i> History</div>
           <div class="profile-item">
-            <i class="fas fa-star" style="color: #ffd700"></i> Upgrade to Pro
+            <i class="fas fa-star" ></i> Upgrade to Pro
           </div>
           <div class="profile-item Update">
             <i class="fas fa-sync-alt"></i> Update App
@@ -192,7 +191,7 @@
           </div>
           <div class="profile-footer">v1.5.69 • Terms & Conditions</div>
         </div>
-      </footer>
+      </nav>
     </aside>
   </body>
 </html>
