style: arreglo de tamaños de los texto

--- a/Stella Studio/index.html
+++ b/Stella Studio/index.html
@@ -10,21 +10,18 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
-    <header>
+    <header class="header-grid">
       <div class="header-container">
         <span class="logo">Stella Studio</span>
         <nav class="main-nav">
           <a href="#">Home</a>
-          <a href="#">Services <span style="font-size: 0.8em">&#9660;</span></a>
+          <a href="#">Services <span>&#9660;</span></a>
           <a href="#">Product</a>
           <a href="#">Design</a>
         </nav>
         <button class="menu-btn">
-          <span class="material-symbols-outlined" style="font-size: 2rem"
-            >menu</span
-          >
+          <span class="material-symbols-outlined">menu</span>
         </button>
       </div>
     </header>
