style: arregro de margenes y padding

--- a/New-york-times/index.html
+++ b/New-york-times/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=more_horiz"
     />
     <link
       href="https://fonts.cdnfonts.com/css/english-towne"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
   </head>
+
   <body>
     <header>
       <div class="nav-container">
@@ -29,7 +34,7 @@
             alt="The New York Times Logo"
             class="nyt-logo"
           />
-          <a href="" class="button-singin">SING IN</a>
+          <a href="" class="button-singin">SIGN IN</a>
           <a href="" class="button-subscribe">SUBSCRIBE</a>
         </nav>
         <nav class="nav-inferior nav-grid">
@@ -52,7 +57,7 @@
             <li><a href="#">Travel</a></li>
             <li><a href="#">Magazine</a></li>
             <li class="dots-icon">
-              <a href="#"><i class="fa-solid fa-ellipsis"></i></a>
+              <span class="material-symbols-outlined"> more_horiz </span>
             </li>
           </ul>
         </nav>
@@ -83,12 +88,12 @@
             <span class="span">TECHFIX </span
             ><span class="date"> may 20, 2020</span>
           </div>
-          <h3>Everything You Need to Know About Slow Internet Speeds</h3>
+          <h1>Everything You Need to Know About Slow Internet Speeds</h1>
           <p>
             Our crummy connections are the biggest tech headache in the
             pandemic. Here's a comprehensive guide to what to do about them.
           </p>
-          <a href="">continue rending</a>
+          <a href="">continue reading</a>
         </div>
         <div class="section-two">
           <h3>Latest News</h3>
@@ -108,6 +113,11 @@
               Coronavirus Shut Down the 'Experience Economy'. Can It Come Back?
             </h3>
             <a href="">continue rending</a>
+          </div>
+          <div class="dots">
+            <button></button>
+            <button></button>
+            <button></button>
           </div>
         </div>
         <div class="section-three">
@@ -145,7 +155,7 @@
               <p>The deal with Joe Rogan, a provocative podcast whit.</p>
             </div>
             <img
-            src="https://i.dailymail.co.uk/1s/2020/05/20/19/28631300-0-image-a-18_1589997894255.jpg"
+              src="https://i.dailymail.co.uk/1s/2020/05/20/19/28631300-0-image-a-18_1589997894255.jpg"
               alt="notices-three-image"
             />
           </div>
@@ -153,5 +163,6 @@
         </div>
       </div>
     </main>
+    <footer></footer>
   </body>
 </html>
