--- a/Stella Studio/index.html
+++ b/Stella Studio/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header-grid">
       <div class="header-container">
-        <span class="logo">Stella Studio</span>
+        <img src="logo.webp" alt="Stella Studio Logo" ">
         <nav class="main-nav">
           <a href="#">Home</a>
           <a href="#">Services <span>&#9660;</span></a>
