--- a/clima/index.html
+++ b/clima/index.html
@@ -55,7 +55,7 @@
         <div class="today">
             <div class="today-heading">
                 <span>Today</span>
-                <a href="details.html">7 days
+                <a href="week.html">7 days
                     <span class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></a>
