style: cambio de reglas repetitivas en el css

--- a/agency/index.html
+++ b/agency/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Agency</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <div class="page-container">
       <header>
         <nav class="header-nav">
           <div class="options">
-            <a href="">
+            <a href="#">
               Works
               <img
                 src="https://www.svgrepo.com/show/509899/down-chevron.svg"
@@ -20,11 +19,11 @@
                 style="width: 14px; vertical-align: middle"
               />
             </a>
-            <a href="">Pricing</a>
-            <a href="">About Us</a>
+            <a href="#">Pricing</a>
+            <a href="#">About Us</a>
           </div>
           <div class="logo">
-            <img src="logo.webp" alt="Logo" />
+            <img src="images/logo.webp" alt="Logo" />
           </div>
           <div class="button">
             <button>Get App</button>
@@ -32,13 +31,13 @@
         </nav>
       </header>
       <main>
-        <div class="main-left">
+        <figure class="main-figure main-figure-left">
           <img
             src="https://blush.design/api/download?shareUri=miMlQ3JQ3XK8Vv_6&c=Hair_0%7E3164cf_Rainbow_0%7Eff89d4_Skin_0%7Efeb1cd&w=800&h=800&fm=png"
             alt="Imagen decorativa"
-            class="main-left-img"
+            class="main-figure-img"
           />
-        </div>
+        </figure>
         <div class="main-center">
           <div class="center-content">
             <h1>Simple design, prototyping and collaboration</h1>
@@ -84,54 +83,46 @@
             </div>
           </div>
         </div>
-        <div class="main-right">
+        <figure class="main-figure main-figure-right">
           <img
             src="https://blush.design/api/download?shareUri=U_xUHmXuAw7khHjC&c=Hair_0%7Ed5e1d5_Rainbow_0%7Eff89d4_Skin_0%7Eef9e89&w=800&h=800&fm=png"
             alt="Imagen decorativa derecha"
-            class="main-right-img"
+            class="main-figure-img"
           />
-        </div>
+        </figure>
       </main>
       <footer>
         <div class="footer-logos">
           <a href="https://www.google.com" target="_blank">
             <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2560px-Google_2015_logo.svg.png"
+              src="images/Google_logo.webp"
               alt="Google"
               class="footer-logo"
             />
           </a>
           <a href="https://www.uber.com" target="_blank">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/5/58/Uber_logo_2018.svg"
-              alt="Uber"
-              class="footer-logo"
-            />
+            <img src="images/uber_logo.webp" alt="Uber" class="footer-logo" />
           </a>
           <a href="https://www.stripe.com" target="_blank">
             <img
-              src="https://www.logo.wine/a/logo/Stripe_(company)/Stripe_(company)-Logo.wine.svg"
+              src="images/stripe_logo.webp"
               alt="Stripe"
               class="footer-logo"
             />
           </a>
           <a href="https://www.nike.com" target="_blank">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg"
-              alt="Nike"
-              class="footer-logo"
-            />
+            <img src="images/nike_logo.webp" alt="Nike" class="footer-logo" />
           </a>
-          <a href="https://itzcash.com/" target="_blank">
+          <a href="https://mashable.com/" target="_blank">
             <img
-              src="https://img.favpng.com/10/1/18/logo-itz-cash-brand-product-design-png-favpng-mUza9rXs2erSXjPkS3QxFZdCr.jpg"
-              alt="ItzCash"
+              src="images/mashable_logo.webp"
+              alt="Mashable"
               class="footer-logo"
             />
           </a>
           <a href="https://www.airbnb.com" target="_blank">
             <img
-              src="https://w7.pngwing.com/pngs/280/97/png-transparent-airbnb-logo-business-los-angeles-pride-business-text-trademark-people.png"
+              src="images/airbnb_logo (1).webp"
               alt="Airbnb"
               class="footer-logo"
             />
