style:arregro de margenes del mockup

--- a/New-york-times/index.html
+++ b/New-york-times/index.html
@@ -18,7 +18,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
   </head>
-
   <body>
     <header>
       <div class="nav-container">
@@ -34,8 +33,8 @@
             alt="The New York Times Logo"
             class="nyt-logo"
           />
-          <a href="" class="button-singin">SIGN IN</a>
-          <a href="" class="button-subscribe">SUBSCRIBE</a>
+          <a href="#" class="button-signin">SIGN IN</a>
+          <a href="#" class="button-subscribe">SUBSCRIBE</a>
         </nav>
         <nav class="nav-inferior nav-grid">
           <p>
@@ -93,7 +92,7 @@
             Our crummy connections are the biggest tech headache in the
             pandemic. Here's a comprehensive guide to what to do about them.
           </p>
-          <a href="">continue reading</a>
+          <a href="#">continue reading</a>
         </div>
         <div class="section-two">
           <h3>Latest News</h3>
@@ -104,7 +103,7 @@
               A Wave of Small Business Closures Is on the Way. Can Washington
               Stop It?
             </h3>
-            <a href="">continue rending</a>
+            <a href="#">continue reading</a>
           </div>
           <div class="notice-two">
             <span class="span">NEWS ANALYSIS</span
@@ -112,7 +111,7 @@
             <h3>
               Coronavirus Shut Down the 'Experience Economy'. Can It Come Back?
             </h3>
-            <a href="">continue rending</a>
+            <a href="#">continue reading</a>
           </div>
           <div class="dots">
             <button></button>
@@ -159,7 +158,7 @@
               alt="notices-three-image"
             />
           </div>
-          <a href="">Show All</a>
+          <a href="#">Show All</a>
         </div>
       </div>
     </main>
