style: arregro de tamaños de los elementos img y h1

--- a/Stella Studio/index.html
+++ b/Stella Studio/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header-grid">
       <div class="header-container">
-        <img src="logo.webp" alt="Stella Studio Logo" ">
+        <img src="./images/logo.webp" alt="Stella Studio Logo" />
         <nav class="main-nav">
           <a href="#">Home</a>
           <a href="#">Services <span>&#9660;</span></a>
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="image-content">
-              <img src="escaleras.webp" alt="Escaleras" />
+              <img src="./images/escaleras.webp" alt="Escaleras" />
             </div>
           </div>
           <div class="info-content">
